Fixed layout shift I think

--- a/src/components/page/HomepageHero/HomepageHero.module.scss
+++ b/src/components/page/HomepageHero/HomepageHero.module.scss
@@ -1,9 +1,10 @@
 .home-hero {
 	background-color: $light-gray;
     width: 100%;
+	margin-bottom: -120px;
 
 	@include lg-max {
-		margin-bottom: 0 !important;
+		margin-bottom: 0;
 	}
 
     &-row {
